# HPC-Patterns

./: LICENSE  README.md  interop_omp_ze_sycl.cpp
aurora.mpich.miniapps/: LICENSE  README.rst  pyproject.toml
aurora.mpich.miniapps/src/: CMakeLists.txt
aurora.mpich.miniapps/src/allreduce/: README.md
aurora.mpich.miniapps/src/allreduce/mpi-omp-offload/: CMakeLists.txt  allreduce-map-mpi-omp-offload.cpp  allreduce-usm-mpi-omp-offload.cpp
aurora.mpich.miniapps/src/allreduce/mpi-sycl/: CMakeLists.txt  allreduce-mpi-sycl.cpp
aurora.mpich.miniapps/src/include/: devices.hpp  mpi_datatype.hpp
concurency/: README.md  bench.hpp  bench_omp.cpp  bench_sycl.cpp  faster.cpp  main.cpp  omp_con.cpp  omp_con_meta.cpp  parse.py  parse.sh  run.sh  run_omp.sh  run_sycl.sh  sycl_con.cpp
p2p/: peer2pear.cpp  run.sh  tile_mapping.sh
sycl_omp_ze_interopt/: interop_omp_sycl.cpp  interop_omp_ze_sycl.cpp
